# BLE-Gamepad-Client

./: .clang-format  CMakeLists.txt  README.md  library.json  library.properties  mkdocs.yml
.github/workflows/: build.yml  deploy-docs.yml  publish-package.yml
docs/: Adding_support_for_a_controller.md  Auto_scan_feature.md  CMakeLists.txt  Configuration_Options.md  Configuration_options.md  Connecting_multiple_controllers.md  Doxyfile  Supporting_New_Controller_Model.md  auto_scan.md  configuration.md  controllers.md  index.md  index.md.in
examples/BasicUsage/: BasicUsage.ino
examples/ReadingControls/: ReadingControls.ino  RedingControls.ino
examples/ReadingControlsInLoop/: ReadingControlsInLoop.ino
examples/ReadingControlsUsingCallback/: ReadingControlsUsingCallback.ino
examples/TriggeringVibrations/: TriggeringVibrations.ino
examples/TwoControllers/: TwoControllers.ino
examples/UsageInLoop/: UsageInLoop.ino
examples/UsingAllCallbacks/: UsingAllCallbacks.ino
examples/UsingCallbacks/: UsingCallbacks.ino
examples/Vibrations/: Vibrations.ino
include/: BLEBatteryEvent.h  BLEClientCallbacksImpl.h  BLEController.h  BLEControllerAdapter.h  BLEControllerInternal.h  BLEControllerRegistry.h  BLEGamepadClient.h  BLEHelpers.h  BLEIncomingSignal.h  BLEIncomingSignalAdapter.h  BLEOutgoingSignal.h  BLEOutgoingSignalAdapter.h  BLEVibrationsCommand.h  BaseEvent.h  BatteryEvent.h  ClientCallbacks.h  Controller.h  ControllerConfig.h  ControllerInternal.h  ControlsEvent.h  IncomingSignal.h  IncomingSignal.hpp  IncomingSignalConfig.h  InputSignal.hpp  Logger.h  OutgoingSignal.h  OutgoingSignal.hpp  OutgoingSignalConfig.h  Parser.h  ScanCallbacks.h  Signal.hpp  SignalCoder.h  SignalConfig.h  Utils.h  VibrationsCommand.h  config.h  logger.h  utils.h  xbox.h
src/: BLEAbstractController.cpp  BLEAbstractController.h  BLEAdapterRegistry.cpp  BLEAdapterRegistry.h  BLEAutoScan.cpp  BLEAutoScan.h  BLEAutoScanner.cpp  BLEAutoScanner.h  BLEBaseCommand.h  BLEBaseController.cpp  BLEBaseController.h  BLEBaseEvent.h  BLEBaseValue.cpp  BLEBaseValue.h  BLEBatteryAPI.h  BLEBatteryEvent.h  BLECharacteristicSpec.h  BLEClientCallbacksImpl.cpp  BLEController.cpp  BLEControllerAdapter.h  BLEControllerAdapterRegistry.cpp  BLEControllerAdapterRegistry.h  BLEControllerInternal.cpp  BLEControllerInternal.h  BLEControllerMatcher.cpp  BLEControllerMatcher.h  BLEControllerModel.h  BLEControllerModelRegistry.cpp  BLEControllerModelRegistry.h  BLEControllerRegistry.cpp  BLEControllerRegistry.h  BLEControlsAPI.h  BLEControlsEvent.h  BLEDeviceInfo.h  BLEDeviceMatcher.cpp  BLEDeviceMatcher.h  BLEGamepadClient.cpp  BLEGamepadClient.h  BLEIncomingSignal.cpp  BLEIncomingSignal.h  (+46 more)
src/steam/: SteamController.cpp  SteamController.h  SteamControlsEvent.cpp  SteamControlsEvent.h  SteamControlsState.cpp  SteamControlsState.h
(+12 files in other folders)
